# signalk-mini

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  agent-gpsd.patch.gz.b64  agent-gpsd.patch.part-00  agent-gpsd.patch.part-01  agent-gpsd.patch.part-02  agent-gpsd.patch.part-03  agent-gpsd.patch.part-04  agent-gpsd.patch.part-05  fix-server-empty.sed  gpsd-audit.patch.gz.b64  gpsd-watch-fix.patch.gz.b64  library.properties  patch-error.txt
.agent-gpsd-patch/: part-00  part-01  part-02  part-03
.github/: pr65-ais-fixture.patch  pr65.patch.part00  pr65.patch.part01  pr65.patch.part02a  pr65.patch.part02b  pr65.patch.part03  pr65.seg00  pr65.seg01  pr65.seg02  pr65.seg03  pr65.seg04  pr65.seg05  pr65.seg06  pr65.seg07  pr65.seg08  pr65.seg09  pr65.seg10  pr65.seg11  pr65.seg12  pr65.seg13  pr65.seg14  pr65.seg15  pr65.seg16  pr65.seg17  pr65.seg18  pr65.seg19  pr65.seg20  pr65.source.part00  pr65.source.part01
.github/pr65-transfer/: chunk-00  chunk-01  chunk-02  chunk-03
.github/workflows/: apply-agent-patch-parts.yml  apply-agent-patch.yml  apply-http-discovery-patch.yml  apply-root-welcome.yml  apply-signalk-http-discovery-fix.yml  ci.yml  debug-pr22-once.yml  fix-http-response-literal.yml  fix-http-response-test.yml  fix-root-welcome-quotes.yml  patch-signalk-delta-once.yml  pr65-position-completeness-fix.yml  pr65-server-review-fix.yml  rebalance-nmea-once.yml  rename-trawl-path-once.yml  repair-server.yml  run-http-discovery-patch.yml  sizeof-datamodel.yml  trigger-signalk-http-discovery-fix.yml
agent-patch/: part-00  part-01  part-02a  part-03  part-04  part-05  part-06a  part-06b  part-06b0  part-06b1  part-06b2  part-06b3
docs/: nmea0183-porting-plan.md  performance-plan.md  signalk-typed-store-view.md
examples/linux/: signalk-mini.conf
fixtures/nmea0183/: coastal_gps_wind_depth.nmea
linux/: config_loader.hpp  main.cpp
mcu/generic-esp32/: generic-esp32.ino
mcu/generic-esp32s3/: generic-esp32s3.ino
mcu/signalk-atoms3r/: signalk-atoms3r.ino
mcu/signalk-esp32s3/: signalk-esp32s3.ino
modules/async-event-loop/src/: async_event_loop.hpp
modules/async-event-loop/src/async_event_loop/: event_loop.hpp  fixed_vector.hpp  memory_pin_event_source.hpp  memory_stream.hpp  micros32_extender.hpp  native.hpp  native_pin_io.hpp  native_stream.hpp  native_tcp.hpp  native_udp.hpp  pin_io.hpp  protocol_reader.hpp  scheduler.hpp  tcp.hpp  tcp_line_protocol.hpp  udp.hpp  websocket.hpp  websocket_server.hpp
modules/async-event-loop/src/async_event_loop_arduino/: arduino_clock.hpp  arduino_interrupt_guard.hpp  arduino_interrupt_pin_event_source.hpp  arduino_loop.hpp  arduino_pin_event_source.hpp  arduino_pin_io.hpp  arduino_serial_stream.hpp  arduino_wifi.hpp  arduino_wifi_tcp.hpp  arduino_wifi_udp.hpp
modules/async-event-loop/src/async_event_loop_linux/: libevent_loop.hpp  linux_fd_datagram_stream.hpp  linux_fd_stream.hpp  linux_fifo_byte_stream.hpp  linux_file_pin_io.hpp  linux_gpiod_pin_event_source.hpp  linux_gpiod_pin_io.hpp  linux_serial_stream.hpp  linux_tcp_client.hpp  linux_tcp_server.hpp  linux_udp_datagram_stream.hpp  monotonic_clock.hpp
modules/data-model/src/: ship_data_model.hpp
modules/data-model/src/ship_data_model/: autopilot_data.hpp  autopilot_names.hpp  (+14 more)
modules/gpsd/src/: gpsd.hpp
modules/nmea0183/src/: nmea0183.hpp  nmea0183_connector.hpp
modules/seatalk/src/: seatalk.hpp  seatalk_connector.hpp  seatalk_rx.hpp  seatalk_tx.hpp
modules/ubx/src/: ubx.hpp
src/: signalk_mini.hpp
src/signalk_mini/: app.hpp  app2.hpp  config.hpp  connection_registry.hpp  gpsd_input.hpp  memory_profile.hpp  model_store.hpp  nmea0183_input.hpp  publisher.hpp  seatalk_change_mapper.hpp  seatalk_input.hpp  server.hpp  signalk_ais_delta_writer.hpp  signalk_delta_writer.hpp  signalk_full_model_writer.hpp  signalk_hello_writer.hpp  signalk_identity.hpp  signalk_json_stream_writer.hpp  signalk_mapper.hpp  signalk_paths.hpp  signalk_timestamp.hpp  signalk_typed_view.hpp  subscription.hpp  types.hpp  ubx_input.hpp  units.hpp  websocket.hpp
src/signalk_mini/json/: signalk_delta_writer.hpp
tests/: test_connector_config.cpp  test_gpsd_model_apply.cpp  test_gpsd_parser.cpp  test_gpsd_runtime.cpp  test_linux_default_config.cpp  test_linux_default_config_startup.cpp  test_model_store_perf.cpp  test_nmea_ais.cpp  test_nmea_ais_enhancements.cpp  test_nmea_ais_interleaved.cpp  test_nmea_ais_own_vessel.cpp  test_nmea_dsc.cpp  test_nmea_dsc_ack.cpp  test_nmea_dsc_dse_payload.cpp  test_nmea_dsc_interpretation.cpp  test_nmea_dsc_lifecycle.cpp  test_nmea_gnss_v4.cpp  test_nmea_inmarsat.cpp  test_nmea_inmarsat_history.cpp  test_nmea_modern.cpp  test_nmea_multipart.cpp  test_nmea_navtex.cpp  test_nmea_navtex_interleaved.cpp  test_nmea_parser_span.cpp  test_nmea_phase3_amendments.cpp  test_nmea_publish_audit.cpp  test_nmea_real_fixtures.cpp  test_nmea_seatalk_tunnel.cpp  test_nmea_signalk_mapping.cpp  test_nmea_smart0183_nav_depth.cpp  test_nmea_special_hooks.cpp  test_nmea_tail_sentences.cpp  test_nmea_tokenizer_examples.cpp  test_publisher_batching.cpp  test_seatalk_decoder.cpp  test_seatalk_model_apply.cpp  test_seatalk_native_routing.cpp  test_seatalk_real_fixtures.cpp  test_seatalk_runtime_tx.cpp  test_seatalk_signalk_mapping.cpp  (+18 more)
tests/fixtures/nmea/: aerorust_gnss_supported.nmea  aerorust_nmea2.nmea  aerorust_nmea_with_sat_info.nmea  aerorust_nmea_with_sat_info_001_050.nmea  aerorust_nmea_with_sat_info_051_100.nmea  aerorust_nmea_with_sat_info_101_150.nmea  aerorust_nmea_with_sat_info_151_200.nmea  ais_vdm_vdo_samples.nmea  dsc_signalk_examples.nmea  gpsbabel_nmea_ms.nmea  gpsd_ais_18_27.nmea  gpsd_reference_edges.nmea  navtex_swiftnmea_nrx.nmea  opencpn_signalk_mixed_stream.nmea  opencpn_stupan_se_10112_tcp_subset.nmea  safetynet_sm_actual.nmea  seatalk_gateway_stalk_capture.nmea  tripmate_850_gps_sample.nmea
tests/fixtures/seatalk/: README.md  seatalk_core.hex  seatalk_navigation_capture.hex  st60_instruments_capture.hex
tests/fixtures/signalk/: boatinstrument_discovery.http  root_welcome.http
tools/: apply_http_discovery_patch.py  apply_root_welcome.py
(+89 files in other folders)
